--- a/HYDROCAL_Google_Collab_Example.ipynb
+++ b/HYDROCAL_Google_Collab_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIEo9Ky65vGCgWJ6XfT3pw",
+      "authorship_tag": "ABX9TyMQ+ZGBgJEoyYa4UCQ7kN30",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +88,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title Example usage with Forms. { display-mode: \"form\", run: \"auto\" }\n",
         "mann_slider = 0.25 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
         "R_input = 5 # @param {type:\"number\"}\n",
         "mannings_to_darcy(mann_slider,R_input,restrict=TRUE)"
