--- a/HYDROCAL_Google_Collab_Example.ipynb
+++ b/HYDROCAL_Google_Collab_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQ+ZGBgJEoyYa4UCQ7kN30",
+      "authorship_tag": "ABX9TyNgaKLpsIjiLUr34de1wei1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +88,11 @@
     {
       "cell_type": "code",
       "source": [
+        "install.packages(\"HYDROCAL\")\n",
+        "library(\"HYDROCAL\")\n",
+        "mann <- 0.035\n",
+        "R <- 10\n",
+        "mannings_to_darcy(mann,R,restrict=TRUE)\n",
         "# @title Example usage with Forms. { display-mode: \"form\", run: \"auto\" }\n",
         "mann_slider = 0.25 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
         "R_input = 5 # @param {type:\"number\"}\n",
