--- a/HYDROCAL_Google_Collab_Example.ipynb
+++ b/HYDROCAL_Google_Collab_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgaKLpsIjiLUr34de1wei1",
+      "authorship_tag": "ABX9TyNTLpFQcsSRkLdDOSWv5gnX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,72 +28,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DUOqGzFZQxHm",
-        "outputId": "88936acc-cbdc-46ae-c56a-f32cc2b51ab8"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n"
-          ]
-        }
-      ],
       "source": [
-        "install.packages(\"HYDROCAL\")\n",
-        "library(\"HYDROCAL\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mann <- 0.035\n",
-        "R <- 10\n",
-        "mannings_to_darcy(mann,R,restrict=TRUE)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "id": "8c1n30pzQ96F",
-        "outputId": "ebad6644-ffe5-4bf8-91c0-4ce33c17b1d0"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "0.0450781824342806"
-            ],
-            "text/markdown": "0.0450781824342806",
-            "text/latex": "0.0450781824342806",
-            "text/plain": [
-              "[1] 0.04507818"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# @title Example usage with Forms. { display-mode: \"form\", run: \"auto\" }\n",
         "install.packages(\"HYDROCAL\")\n",
         "library(\"HYDROCAL\")\n",
-        "mann <- 0.035\n",
-        "R <- 10\n",
-        "mannings_to_darcy(mann,R,restrict=TRUE)\n",
-        "# @title Example usage with Forms. { display-mode: \"form\", run: \"auto\" }\n",
+        "\n",
+        "# mann <- 0.035\n",
+        "# R <- 10\n",
+        "# mannings_to_darcy(mann,R,restrict=TRUE)\n",
+        "\n",
         "mann_slider = 0.25 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
         "R_input = 5 # @param {type:\"number\"}\n",
         "mannings_to_darcy(mann_slider,R_input,restrict=TRUE)"
