--- a/HYDROCAL_Google_Collab_Example.ipynb
+++ b/HYDROCAL_Google_Collab_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTLpFQcsSRkLdDOSWv5gnX",
+      "authorship_tag": "ABX9TyPlzlx84t5/0uKMHVownFEt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Example usage with Forms. { display-mode: \"form\", run: \"auto\" }\n",
+        "# @title HYDROCAL Example Usage. { display-mode: \"form\", run: \"auto\" }\n",
         "install.packages(\"HYDROCAL\")\n",
         "library(\"HYDROCAL\")\n",
         "\n",
@@ -37,35 +37,15 @@
         "# R <- 10\n",
         "# mannings_to_darcy(mann,R,restrict=TRUE)\n",
         "\n",
-        "mann_slider = 0.25 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
+        "mann_slider = 0.01 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
         "R_input = 5 # @param {type:\"number\"}\n",
         "mannings_to_darcy(mann_slider,R_input,restrict=TRUE)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "id": "pTC2-VnkT5MA",
-        "outputId": "058c97b2-93a5-484e-ac1c-74fecd077682"
+        "id": "pTC2-VnkT5MA"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "2.89770157856895"
-            ],
-            "text/markdown": "2.89770157856895",
-            "text/latex": "2.89770157856895",
-            "text/plain": [
-              "[1] 2.897702"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
     }
   ]
 }
