--- a/HYDROCAL_Google_Collab_Example.ipynb
+++ b/HYDROCAL_Google_Collab_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlzlx84t5/0uKMHVownFEt",
+      "authorship_tag": "ABX9TyNlviae9RR1a7sR0DCtc8+N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,23 +29,52 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title HYDROCAL Example Usage. { display-mode: \"form\", run: \"auto\" }\n",
+        "# @title Run to load HYDROCAL { display-mode: \"form\", run: \"auto\" }\n",
         "install.packages(\"HYDROCAL\")\n",
         "library(\"HYDROCAL\")\n",
-        "\n",
         "# mann <- 0.035\n",
         "# R <- 10\n",
-        "# mannings_to_darcy(mann,R,restrict=TRUE)\n",
-        "\n",
-        "mann_slider = 0.01 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
+        "# mannings_to_darcy(mann,R,restrict=TRUE)"
+      ],
+      "metadata": {
+        "id": "8dTY3v1KlxED"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title HYDROCAL Example Usage. { display-mode: \"form\", run: \"auto\" }\n",
+        "mann_slider = 0.17 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
         "R_input = 5 # @param {type:\"number\"}\n",
         "mannings_to_darcy(mann_slider,R_input,restrict=TRUE)"
       ],
       "metadata": {
-        "id": "pTC2-VnkT5MA"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "id": "pTC2-VnkT5MA",
+        "outputId": "5ad4e82e-de03-4fc2-dc77-7d0905878e61"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "1.33989720993028"
+            ],
+            "text/markdown": "1.33989720993028",
+            "text/latex": "1.33989720993028",
+            "text/plain": [
+              "[1] 1.339897"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
