--- a/HYDROCAL_Google_Collab_Example.ipynb
+++ b/HYDROCAL_Google_Collab_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlviae9RR1a7sR0DCtc8+N",
+      "authorship_tag": "ABX9TyPZbZyUXc63hLGUhJaEl+Uz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title HYDROCAL Example Usage. { display-mode: \"form\", run: \"auto\" }\n",
+        "# @title HYDROCAL Example Usage { display-mode: \"form\", run: \"auto\" }\n",
         "mann_slider = 0.17 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
         "R_input = 5 # @param {type:\"number\"}\n",
         "mannings_to_darcy(mann_slider,R_input,restrict=TRUE)"
