--- a/HYDROCAL_Google_Collab_Example.ipynb
+++ b/HYDROCAL_Google_Collab_Example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZbZyUXc63hLGUhJaEl+Uz",
+      "authorship_tag": "ABX9TyP7hT0u32Yc1XdvM+YDt43f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,16 +37,30 @@
         "# mannings_to_darcy(mann,R,restrict=TRUE)"
       ],
       "metadata": {
-        "id": "8dTY3v1KlxED"
+        "id": "8dTY3v1KlxED",
+        "outputId": "5b0bf898-a82a-4018-a36e-0b6db44952d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# @title HYDROCAL Example Usage { display-mode: \"form\", run: \"auto\" }\n",
-        "mann_slider = 0.17 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
+        "mann_slider = 0.08 # @param {type:\"slider\", min:0.01, max:0.5, step:0.01}\n",
         "R_input = 5 # @param {type:\"number\"}\n",
         "mannings_to_darcy(mann_slider,R_input,restrict=TRUE)"
       ],
@@ -56,20 +70,20 @@
           "height": 34
         },
         "id": "pTC2-VnkT5MA",
-        "outputId": "5ad4e82e-de03-4fc2-dc77-7d0905878e61"
+        "outputId": "fbc6cd1e-fdd1-4c14-e181-b7fd307bdfbc"
       },
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "1.33989720993028"
+              "0.296724641645461"
             ],
-            "text/markdown": "1.33989720993028",
-            "text/latex": "1.33989720993028",
+            "text/markdown": "0.296724641645461",
+            "text/latex": "0.296724641645461",
             "text/plain": [
-              "[1] 1.339897"
+              "[1] 0.2967246"
             ]
           },
           "metadata": {}
